argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-3:134604498185:certificate/d2af9d54-2b41-4ff0-97c0-a59d8674802e"
    alb.ingress.kubernetes.io/healthcheck-path: /argocd/healthz
    alb.ingress.kubernetes.io/group.name: global-alb
    alb.ingress.kubernetes.io/group.order: '5'
spec:
  ingressClassName: alb
  rules:
    - host: ch4-g3-nar.sandbox.devopsinstitute.id
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
